--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     <div class="card mb-5">
       <div class="card-body">
         <h5 class="card-title">Новая рассылка</h5>
-        <form method="post" action="/send/">
+        <form method="post" action="/send/" class="js-send-message-form">
           <div class="form-row align-items-center">
             <div class="col">
-              <label class="sr-only" for="inlineFormInput">Name</label>
               <input type="text" class="form-control mb-2" name="text" required="required" placeholder="Текст сообщения">
             </div>
             <div class="col-auto">
@@ -50,6 +49,22 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+  <script type="text/javascript">
+    function makeAsyncForm(form){
+      form.addEventListener('submit', event => {
+        event.preventDefault();
+
+        fetch(form.action, {
+          method: 'POST',
+          body: new FormData(form),
+        });
+      })
+    }
+    let forms = document.getElementsByClassName('js-send-message-form');
+    for (let form of forms){
+      makeAsyncForm(form);
+    }
+  </script>
   <script type="text/javascript">
     const serverUpdateMsgScheme = {
       msgType: {presence: true, type: 'string', format: /Buses/},
