--- a/index.html
+++ b/index.html
@@ -54,9 +54,16 @@
       form.addEventListener('submit', event => {
         event.preventDefault();
 
+        let formData = new FormData(form);
+
+        const bodyParams = new URLSearchParams();
+        for (const pair of formData) {
+            bodyParams.append(pair[0], pair[1]);
+        }
+
         fetch(form.action, {
           method: 'POST',
-          body: new FormData(form),
+          body: bodyParams,
         });
       })
     }
