Specify Vue.js version, move template to x-template tag

--- a/index.html
+++ b/index.html
@@ -41,34 +41,34 @@
 
     <div class="card mb-5">
       <div class="card-body" id="mailingProgress">
-        <p class="lead" v-if="!mailings.length">Пока нет рассылок</p>
-
-          <!-- Start SMSMailing card -->
-          <div class="row mt-4 mb-4" v-for="mailing in mailings">
-            <div class="col-3">
-              <p class="lead text-right mr-1">
-                {{mailing.date}}
-              </p>
-            </div>
-            <div class="col-9">
-              <div class="progress mt-1" style="height: 20px;">
-
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" :aria-valuenow="mailing.percentFulfilled" aria-valuemin="0" aria-valuemax="100" v-bind:style="{width:mailing.percentFulfilled+'%'}">{{mailing.percentFulfilled + '%'}}</div>
-
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" :aria-valuenow="mailing.percentFailed" aria-valuemin="0" aria-valuemax="100" v-bind:style="{width:mailing.percentFailed+'%'}">{{mailing.percentFailed + '%'}}</div>
-
-              </div>
-              <p class="text-muted mt-2">
-                Рассылка #{{mailing.mailingId}}. {{mailing.SMSText}}
-              </p>
-            </div>
-          </div>
-          <!-- End SMSMailing card -->
-
       </div>
     </div>
-
   </div>
+  <script type="x-template" id="mailingProgressTemplate">
+    <p class="lead p-3" v-if="!mailings.length">Пока нет рассылок</p>
+
+    <!-- Start SMSMailing card -->
+    <div class="row mt-4 mb-4" v-for="mailing in mailings">
+      <div class="col-3">
+        <p class="lead text-right mr-1">
+          {{mailing.date}}
+        </p>
+      </div>
+      <div class="col-9">
+        <div class="progress mt-1" style="height: 20px;">
+
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" :aria-valuenow="mailing.percentFulfilled" aria-valuemin="0" aria-valuemax="100" v-bind:style="{width:mailing.percentFulfilled+'%'}">{{mailing.percentFulfilled + '%'}}</div>
+
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" :aria-valuenow="mailing.percentFailed" aria-valuemin="0" aria-valuemax="100" v-bind:style="{width:mailing.percentFailed+'%'}">{{mailing.percentFailed + '%'}}</div>
+
+        </div>
+        <p class="text-muted mt-2">
+          Рассылка #{{mailing.mailingId}}. {{mailing.SMSText}}
+        </p>
+      </div>
+    </div>
+    <!-- End SMSMailing card -->
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/loglevel/1.6.4/loglevel.min.js" integrity="sha256-ACTlnmNCkOooSKkPCKYbiex8WLE82aeiN+Z9ElZag5Q=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js" integrity="sha256-xgP6yiUGsRLSmsC8oW0KrRWiK2ek7cSBznIDMEcdp/U=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
@@ -77,7 +77,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <!-- development version, includes helpful console warnings -->
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js" integrity="sha256-kXTEJcRFN330VirZFl6gj9+UM6gIKW195fYZeR3xDhc=" crossorigin="anonymous"></script>
   <script type="text/javascript">
     function makeAsyncForm(form){
       form.addEventListener('submit', event => {
@@ -327,6 +327,7 @@
     }
     var app = new Vue({
       el: '#mailingProgress',
+      template: document.getElementById('mailingProgressTemplate').innerHTML,
       data: {
         mailings: [],
       },
